fix: vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "tailwindCSS.experimental.classRegex": [
-    ["tv\\((([^()]*|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
+    ["tv\\((([^()]*|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
+    "\\S*[Cc]lass[nN]ame\\S* ?[:=] [\"'`](.*)[\"'`]"
   ],
+
   "typescript.tsdk": "node_modules/typescript/lib",
   "tailwindCSS.classAttributes": [
     "class",
